# Jippin

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmessage  .pre-commit-config.yaml  AGENTS.md  DEPLOYMENT.md  Makefile  README.md  commitlint.config.mjs
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 20260528_0533_0001_baseline.py  20260528_0645_0002_deployment_probe_temp.py  20260528_0655_0003_drop_deployment_probe_temp.py  20260528_0905_0004_request_logs.py  20260529_1200_0005_auth_skeleton.py  20260529_1330_0006_terms_consent_unique_key.py  20260601_1200_0007_auth_identities.py
apps/api/src/: config.py  db.py  errors.py  logging.py  main.py
apps/api/src/agent/: __init__.py  checkpointer.py  events.py  graph.py  projection.py  prompts.py  runner.py  session_context.py  warmup.py
apps/api/src/auth/: __init__.py  jwks.py  request_token.py  session.py  state_store.py  supabase_jwt.py
apps/api/src/middleware/: request_log.py  request_log_redaction.py  selective_gzip.py
apps/api/src/models/: __init__.py  auth.py  base.py  consultation_lead.py  faq.py  home_check.py  main_feature.py  request_log.py
apps/api/src/routers/: __init__.py  account.py  agent.py  auth.py  chat.py  faq.py  floorplans.py  healthz.py  home_check.py  leads.py  sessions.py
apps/api/src/schemas/: account.py  agent.py  auth.py  chat.py  faq.py  floorplans.py  home_check.py  leads.py  sessions.py
apps/api/src/services/: __init__.py  account.py  alimtalk.py  auth.py  (+16 more)
apps/api/tests/: _main_flow_db_fake.py  _supabase_helpers.py  conftest.py  test_account_router.py  test_account_schema.py  test_account_services.py  test_agent_projection.py  test_agent_runner.py  test_agent_schemas.py  test_agent_session_context.py  test_agent_tools_domain.py  test_agent_tools_segmentation.py  test_agent_tools_vlm.py  test_agent_warmup.py  test_alembic_revision.py  test_alimtalk.py  test_auth_anonymous_users.py  test_auth_oauth_callback.py  test_auth_oauth_start.py  test_auth_providers.py  test_auth_secondary_endpoints.py  test_auth_supabase_session.py  test_chat_skeleton.py  test_codef_building_register.py  test_config.py  test_estimate.py  test_faq_router.py  test_floorplans_skeleton.py  test_healthz.py  test_home_check_router.py  test_leads_address_search.py  test_leads_router.py  test_leads_schema.py  test_leads_session_link.py  test_middleware_request_log.py  test_models_base.py  test_models_consultation_lead.py  test_models_faq.py  test_models_main_feature.py  test_models_metadata.py  (+9 more)
(+382 files in other folders)
