[project]
name = "jippin-api"
version = "0.1.0"
description = "Jippin FastAPI backend (CMP-528 bootstrap)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "gunicorn>=23,<24",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "psycopg[binary,pool]>=3.2,<4.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "structlog>=24,<25",
    "python-multipart>=0.0.12,<0.1",
    "httpx>=0.28,<0.29",
    "python-jose[cryptography]>=3.3,<4.0",
    "redis>=5.0,<6.0",
    "solapi>=5.0,<6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8,<0.9",
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<0.25",
    "anyio>=4,<5",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]
