[project]
name = "jippin-api"
version = "0.1.0"
description = "Jippin FastAPI backend (CMP-528 bootstrap)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "gunicorn>=23,<24",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "psycopg[binary,pool]>=3.2,<4.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "structlog>=24,<25",
    "python-multipart>=0.0.12,<0.1",
    "httpx>=0.28,<0.29",
    "python-jose[cryptography]>=3.3,<4.0",
    "redis>=5.0,<6.0",
    "solapi>=5.0,<6.0",
    "cryptography>=43,<46",
    # 에이전트 세션 (우리집 체크 대화형 에이전트) — CMP-DIRECT.
    # deepagents 는 신생 패키지라 breaking change 가 잦다 — uv.lock 으로 정확히
    # 고정하고, 라이브러리 업그레이드 시 langgraph 체크포인터 스키마 마이그레이션
    # (supabase/migrations) 동반 여부를 반드시 확인한다.
    "langchain>=0.3,<0.4",
    "langchain-openai>=0.2,<0.4",
    "langgraph>=0.2,<0.6",
    "langgraph-checkpoint-postgres>=2.0,<3.0",
    "langsmith>=0.1,<0.5",
    "deepagents>=0.0.5",
    "shapely>=2.1.2",
    # 사전검토 PDF 리포트 발부 (CMP-DIRECT) — Jinja2 HTML 템플릿 → WeasyPrint PDF.
    # WeasyPrint 는 시스템 라이브러리(pango/cairo/gdk-pixbuf)에 의존한다 —
    # Dockerfile runtime 스테이지가 해당 lib + 한글 폰트(fonts-nanum)를 설치한다.
    # Pillow 는 WeasyPrint 의존이지만 도면 오버레이에서 직접 쓰므로 명시 선언한다.
    "jinja2>=3.1,<4.0",
    "weasyprint>=62,<66",
    "pillow>=10,<12",
]

[dependency-groups]
dev = [
    "ruff>=0.8,<0.9",
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<0.25",
    "anyio>=4,<5",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]
